# korea-cli

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: bundle-ci.yml  release.yml
data/: html-survey-report.md  survey-report.md  uncovered-api-report.md
docs/api-catalog/: README.md
docs/api-catalog/by-org/: 강북구도시관리공단.md  강원특별자치도-강릉시.md  강원특별자치도-동해시.md  강원특별자치도-속초시.md  강원특별자치도-양양군.md  강원특별자치도-원주시.md  강원특별자치도-춘천시.md  강원특별자치도.md  개인정보보호위원회.md  건강보험심사평가원.md  건설근로자공제회.md  게임물관리위원회.md  경기도-광명시.md  경기도-구리시.md  경기도-김포시.md  경기도-남양주시.md  경기도-성남시.md  경기도-수원시.md  경기도-안양시.md  경기도-양주시.md  경기도-연천군.md  경기도-용인시.md  경기도-의왕시.md  경기도-이천시.md  경기도-포천시.md  경기도-하남시.md  경기도.md  경상남도-거제시.md  경상남도-김해시.md  경상남도-남해군.md  경상남도-양산시.md  경상남도-의령군.md  경상남도-진주시.md  경상남도-창녕군.md  경상남도-창원시.md  경상남도-하동군.md  경상남도.md  경상북도-경산시.md  경상북도-경주시.md  경상북도-구미시.md  (+368 more)
docs/devlogs/: current.md
docs/plans/: 2026-03-31-bundle-transition.md  2026-03-31-phase1-mvp.md  2026-04-01-spec-quality-design.md  2026-04-02-api-survey.md  2026-04-02-crawl-pages-design.md  2026-04-02-gateway-spec-extraction-plan.md  2026-04-02-html-pattern-discovery-plan.md  2026-04-02-html-survey.md  2026-04-03-external-url-extraction-design.md  2026-04-03-gen-catalog-docs.md  2026-04-04-partial-stub-and-ci-pipeline.md  2026-04-05-partial-stub-finalization.md
docs/roadmap/: phase1-mvp.md
docs/specs/: 2026-03-31-bundle-transition-design.md  2026-04-02-gateway-spec-extraction-design.md  2026-04-02-html-pattern-discovery-design.md  2026-04-04-partial-stub-and-ci-pipeline-design.md  2026-04-05-partial-stub-finalization-design.md
docs/superpowers/plans/: 2026-03-31-phase1-mvp.md
docs/superpowers/specs/: 2026-03-31-phase1-mvp-design.md
scripts/: publish.sh
src/: main.rs
src/api/: mod.rs
src/catalog/: mod.rs
src/cli/: call.rs  mod.rs  search.rs  spec.rs  update.rs
src/config/: mod.rs  paths.rs
src/core/: bundle.rs  caller.rs  catalog.rs  html_parser.rs  mod.rs  swagger.rs  types.rs
src/mcp/: mod.rs  server.rs  tools.rs
tests/integration/: caller_test.rs  catalog_test.rs  config_test.rs  e2e_gateway_smoke.rs  swagger_test.rs
