[package]
name = "korea-cli"
version = "0.1.0"
edition = "2021"
description = "Access Korea's public data APIs with natural language. CLI + MCP server."
license = "MIT"
repository = "https://github.com/JunsikChoi/korea-cli"
homepage = "https://koreacli.com"
readme = "README.md"
keywords = ["korea", "public-data", "cli", "mcp", "openapi"]
categories = ["command-line-utilities", "api-bindings"]
default-run = "korea-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "6"
toml = "0.8"
regex = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
once_cell = "1"
futures = "0.3"
scraper = "0.22"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"

[[bin]]
name = "build-bundle"
path = "src/bin/build_bundle.rs"

[[bin]]
name = "survey"
path = "src/bin/survey.rs"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[test]]
name = "config_test"
path = "tests/integration/config_test.rs"

[[test]]
name = "catalog_test"
path = "tests/integration/catalog_test.rs"

[[test]]
name = "swagger_test"
path = "tests/integration/swagger_test.rs"

[[test]]
name = "caller_test"
path = "tests/integration/caller_test.rs"
