[package]
name = "korea-cli"
version = "0.1.0"
edition = "2021"
description = "Access Korea's public data APIs with natural language. CLI + MCP server."
license = "MIT"
repository = "https://github.com/JunsikChoi/korea-cli"
homepage = "https://koreacli.com"
readme = "README.md"
keywords = ["korea", "public-data", "cli", "mcp", "openapi"]
categories = ["command-line-utilities", "api-bindings"]
default-run = "korea-cli"
# crates.io 배포 시 번들 파일을 명시적으로 포함한다.
# data/bundle.zstd는 .gitignore 대상이지만, cargo publish 전에
# scripts/publish.sh가 최신 번들을 다운로드한 후 publish한다.
# include 필드는 .gitignore를 override하므로 번들이 크레이트 패키지에 포함된다.
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "data/bundle.zstd",  # publish 전 scripts/publish.sh로 먼저 다운로드 필수
]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "6"
toml = "0.8"
regex = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
once_cell = "1"
futures = "0.3"
scraper = "0.22"
quick-xml = "0.36"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"

[[bin]]
name = "build-bundle"
path = "src/bin/build_bundle.rs"

[[bin]]
name = "survey"
path = "src/bin/survey.rs"

[[bin]]
name = "html-survey"
path = "src/bin/html_survey.rs"

[[bin]]
name = "crawl-pages"
path = "src/bin/crawl_pages.rs"

[[bin]]
name = "analyze-pages"
path = "src/bin/analyze_pages.rs"

[[bin]]
name = "summarize-signals"
path = "src/bin/summarize_signals.rs"

[[bin]]
name = "gen-catalog-docs"
path = "src/bin/gen_catalog_docs.rs"

[[bin]]
name = "verify-bundle"
path = "src/bin/verify_bundle.rs"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[test]]
name = "config_test"
path = "tests/integration/config_test.rs"

[[test]]
name = "catalog_test"
path = "tests/integration/catalog_test.rs"

[[test]]
name = "swagger_test"
path = "tests/integration/swagger_test.rs"

[[test]]
name = "caller_test"
path = "tests/integration/caller_test.rs"
